# smplayer

./: Changelog  smplayer.spec
debian-rvm/: changelog
experimental/: osgetinfo.cpp  osgetinfo.h  osparser.cpp  osparser.h  simplehttp.cpp  simplehttp.h  subdownloader.cpp  subdownloader.h  subdownloader.pro  subdownloaderdialog.cpp  subdownloaderdialog.h  subdownloaderdialog.ui
mplayer-builds/: compilacion_mplayer_mingw_con_fontconfig.txt  compilacion_mplayer_mingw_paquetes_adicionales.txt  compilacion_mplayer_mingw_sin_fontconfig.txt  compilar_mplayer_en_cygwin.txt  compiling_mplayer_mingw_additional_packages.txt  compiling_mplayer_mingw_with_fontconfig.txt  readme.txt
smplayer-themes-nonfree/: Changelog  README.txt  create_deb.sh
src/: basegui.cpp  basegui.h  constants.h  core.cpp  images.cpp  infofile.cpp  main.cpp  prefinterface.cpp  prefsubtitles.cpp  version.h
tests/: smplayer.win32-test-smtube.nsi
web/: .htaccess  analytics.js  analytics.php  awards.php  base.css  contact.php  content.css  documentation.php  donate.php  donate_button.php  download_links.php  download_source.php  download_suse.php  faq.php  img  (+50 more)
web/test_translations/i18nHTML/admin/: Makefile.am  Makefile.in  accounts.php  add_language.php  by_user.php  cleanup.php  commitMassTranslation.php  commitTranslation.php  delete.php  dig.php  editor.php  i18nHTML  index.php  languages.php  login.php  login_form.php  logout.php  manage_account.php  signup.php  signup_form.php  status.php  tables.php  translate.php
web/test_translations/i18nHTML/admin/i18nHTML/: i18nhtml.php  i18nhtml_config.php
(+786 files in other folders)
