pkgdata_DATA = \
 accounts.php \
 add_language.php \
 by_user.php \
 cleanup.php \
 commitMassTranslation.php \
 commitTranslation.php \
 delete.php \
 dig.php \
 editor.php \
 index.php \
 languages.php \
 login_form.php \
 login.php \
 logout.php \
 manage_account.php \
 signup_form.php \
 signup.php \
 status.php \
 tables.php \
 translate.php 

EXTRA_DIST = $(pkgdata_DATA)
